--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 h1 {
-    font-family: 'Courier New', Courier, monospace;
     font-size: 32px; 
     font-weight: 500;
     text-align: center;
+}
+* {
+    font-family: 'Courier New', Courier, monospace;
 }
