--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 h1 {
     font-size: 32px; 
     font-weight: 500;
     text-align: center;
 }
-* {
-    font-family: 'Courier New', Courier, monospace;
+
+#chef-logo {
+    height: auto;
+    width: 100px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
