--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,12 @@ h1 {
     font-size: 20px;
     list-style-type:none;
 }
+
+p {
+    text-align: center;
+}
+
+.image {
+    height: auto;
+    width: 400px;
+}
