--- a/styles.css
+++ b/styles.css
@@ -28,4 +28,13 @@ p {
 .image {
     height: auto;
     width: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hub {
+    font-size: 20px;
+    background-color: black;
+    color: white;
 }
